v1.3 Agree new pages to search better information with IA